# aph-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  aph-rs.code-workspace
.cargo/: config.toml
aph/: Cargo.toml
aph-cli/: Cargo.toml
aph-cli/src/: main.rs  models.rs  test.rs  utils.rs
aph/src/: aph.rs  coxian.rs  lib.rs  operations.rs  polynomial.rs  representation.rs  round_op.rs  utils.rs  voting.rs
aph/src/formats/: aut.rs  dft.rs  mod.rs  tra.rs
aph/src/formats/ft/: ctmc_aut.rs  mod.rs  modules.rs  node.rs  nodetree.rs  parser.rs  state.rs  utils.rs
aph/src/linalg/: mod.rs
aph/src/linalg/fields/: float.rs  float32.rs  float64.rs  float64_cf.rs  float64_round.rs  inari_int.rs  interval_field.rs  matrix.rs  mod.rs  rational.rs  symbolic.rs
aph/src/representation/: bidiagonal.rs  mod.rs  sparse.rs  triangular.rs
docs/: katex-header.html
examples/: and.tra  difficult.tra  ex_3.11.tra  ex_3.7.tra  exponential.tra  from_py.tra  simple.tra  small.tra
