[package]
name = "aph-cli"
version = "0.2.0"
description = "A tool for acyclic phase-type (APH) distributions."
authors = ["Maximilian Köhl <mail@koehlma.de>"]
edition = "2021"
repository = "https://github.com/koehlma/aph-rs"
license = "MIT"

[dependencies]
aph = { version = "0.2.0", path = "../aph" }
clap = { version = "3.1.6", features = ["derive"] }