[package]
name = "aph"
version = "0.2.2"
description = "A library for acyclic phase-type (APH) distributions."
authors = ["Maximilian Köhl & Nazareno Garagiola <garagiola@depend.uni-saarland.de>"]
edition = "2021"
repository = "https://github.com/NazaGara/aph-rs"
license = "MIT"

[dependencies]
itertools = "0.13.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
rug = "1.26.1"
thiserror = "1.0.67"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "../docs/katex-header.html",
]
